# SolaaRS

./: .gitignore  README.md  meson.build
.github/workflows/: checks.yml  tests.yml
logitech-hidpp/: Cargo.toml
logitech-hidpp/src/: base.rs  base_usb.rs  common.rs  device.rs  error.rs  hidpp10.rs  hidpp10_constants.rs  hidpp20.rs  hidpp20_constants.rs  lib.rs  listener.rs  message.rs  onboard_profiles.rs  receiver.rs
solaars-cli/: Cargo.toml  meson.build
solaars-cli/src/: discovery.rs  main.rs  settings.rs
solaars-cli/src/commands/: config.rs  mod.rs  pair.rs  probe.rs  profiles.rs  show.rs  unpair.rs
solaarsd/: Cargo.toml  meson.build
solaarsd/data/: org.solaarsd.conf  org.solaarsd.service  org.solaarsd.xml  solaarsd.service.in
solaarsd/src/: main.rs  state.rs
solaarsd/src/interfaces/: device.rs  mod.rs  receiver.rs
