[package]
name = "logitech-hidpp"
version = "0.1.0"
edition = "2024"
description = "Logitech HID++ protocol communication layer"
license = "GPL-2.0-or-later"

[dependencies]
hidapi = { version = "2", default-features = false, features = ["linux-native"] }
thiserror = "2"
log = "0.4"
bitflags = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
