[package]
name = "solaars-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Logitech HID++ device management"
license = "GPL-2.0-or-later"

[[bin]]
name = "solaars"
path = "src/main.rs"

[dependencies]
logitech-hidpp = { path = "../logitech-hidpp" }
hidapi = { version = "2", default-features = false, features = ["linux-native"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde_yaml = "0.9"
